--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </style>
 
 <iframe 
-  src="https://embed.figma.com/design/c3MTZV24QPS1ZfVCVgTbeD/mockup?node-id=0-1&embed-host=share" 
+  src="https://embed.figma.com/proto/c3MTZV24QPS1ZfVCVgTbeD/mockup?node-id=1-330&p=f&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&embed-host=share" 
   allowfullscreen>
 </iframe>
